<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twitter</string>
    <string name="action_settings">Settings</string>
    <string name="login_label">Log in</string>
    <string name="title_activity_timeline">Timeline</string>
    <string name="default_body_text">This is the tweet body</string>
    <string name="default_user_name_text">\@foo</string>
    <string name="default_created_at_text">now</string>
    <string name="default_name_text">Name</string>
    <string name="menu_compose">Compose</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_tweet">Tweet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="hello_world">Hello world!</string>
  <string name="default_tagline_text">Tagline</string>
  <string name="default_followers_count_text">5 Followers</string>
  <string name="default_following_count_text">5 Following</string>

</resources>