<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

  <ImageView
    android:layout_width="40dp"
    android:layout_height="40dp"
    android:id="@+id/ivProfileImage"
    android:src="@drawable/ic_launcher"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"/>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/default_user_name_text"
    android:id="@+id/tvUserName"
    android:layout_toEndOf="@+id/tvName"
    android:layout_alignParentTop="true"
    android:layout_toRightOf="@+id/tvName"
    android:layout_marginLeft="10dp"/>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/default_body_text"
    android:id="@+id/tvBody"
    android:layout_below="@+id/tvUserName"
    android:layout_toRightOf="@+id/ivProfileImage"
    android:layout_toEndOf="@+id/ivProfileImage"/>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:text="@string/default_created_at_text"
    android:id="@+id/tvCreatedAt"
    android:layout_alignParentTop="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"/>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/default_name_text"
    android:id="@+id/tvName"
    android:layout_alignParentTop="true"
    android:layout_toRightOf="@+id/ivProfileImage"
    android:layout_toEndOf="@+id/ivProfileImage"
    android:textStyle="bold"/>
</RelativeLayout>