<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codepath.apps.twitterclient.fragments.profile.UserHeaderFragment">


  <ImageView
    android:layout_width="75dp"
    android:layout_height="75dp"
    android:id="@+id/ivUserProfileImage"
    android:src="@drawable/ic_launcher"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"/>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/default_name_text"
    android:id="@+id/tvName"
    android:layout_toEndOf="@+id/ivUserProfileImage"
    android:layout_marginLeft="15dp"
    android:layout_alignParentTop="true"
    android:layout_toRightOf="@+id/ivUserProfileImage"
    android:layout_marginTop="15dp"/>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/default_tagline_text"
    android:id="@+id/tvTagline"
    android:layout_below="@+id/tvName"
    android:layout_alignLeft="@+id/tvName"
    android:layout_alignStart="@+id/tvName"
    android:layout_marginTop="5dp"/>

  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_below="@+id/ivUserProfileImage"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/default_followers_count_text"
      android:id="@+id/tvFollowersCount"/>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/default_following_count_text"
      android:id="@+id/tvFollowingCount"
      android:layout_marginLeft="20dp"/>
  </LinearLayout>
</RelativeLayout>
